# Archive

./: .gitignore  .mcp.json  CLAUDE.md  CNYT_CND_agreed_terms_detailed.txt  RECOVERY.md  auto_backup.ps1  auto_backup_chats.ps1  convert_chats.ps1  fix_jake.py  gcp_ssh_open.vbs  jake_model.json  tmp_notion_payload.json
Documents/: Default.rdp
longrise-main0612/longrise-main/lr_fastapi/: .env.stage.sample  README.md  alembic.ini  main.py  pyproject.toml  seed_admin.py  seed_operational_data.py  seed_test_users.py
longrise-main0612/longrise-main/lr_fastapi/alembic/: env.py
longrise-main0612/longrise-main/lr_fastapi/app/api/: dependencies.py
longrise-main0612/longrise-main/lr_fastapi/app/api/v1/: __init__.py  account.py  admin.py  admin_console.py  audit_logs.py  auth.py  content.py  dashboard.py  investments.py  market.py  support.py  transactions.py  users.py  wallet.py  withdrawals.py
longrise-main0612/longrise-main/lr_fastapi/app/core/: config.py  database.py  security.py
longrise-main0612/longrise-main/lr_fastapi/app/models/: __init__.py  admin.py  audit_log.py  cms.py  email_verification.py  investment.py  p2p.py  payout.py  reconciliation.py  system.py  transaction.py  user.py  withdrawal.py
longrise-main0612/longrise-main/lr_fastapi/app/services/: account_service.py  admin_console_service.py  admin_service.py  audit_service.py  email_service.py  managed_asset_service.py  operations_service.py  signup_service.py  user_service.py  wallet_service.py  withdrawal_service.py
longrise-main0612/longrise-main/lr_fastapi/tests/: test_operational_smoke.py
(+507 files in other folders)
