[project]
name = "lr-fastapi"
version = "0.1.0"
description = "Longrise AI FastAPI Backend Server"
authors = [
    {name = "Longrise Team", email = "admin@longrise.ai"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "bcrypt>=4.0.0,<5.0.0",
    "cryptography>=42.0.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
